Fixed horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+html {
+  /* this makes sure the padding and the border is included in the box sizing */
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+html body {
+  padding: 0;
+  margin: 0;
+  overflow-x: inherit;
+}
+
 .navbar-bg {
   width: 100%;
   height: 100%;
