--- a/src/components/features/Features.css
+++ b/src/components/features/Features.css
@@ -59,7 +59,7 @@ body {
   flex: 1;
 }
 .features-right2 img {
-  width: 125%;
+  width: 55%;
   text-align: center;
 }
 
